update user provider
- to be also updatable
- to KC22 method deprecations
- to Java 17